# rust-office

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
deploy/: index.js  package-lock.json  package.json
deploy/src/: builder.js  installer.js  uploader.js  utils.js
kernel/aarch64-apple-darwin/: libbrotlicommon.1.dylib  libbrotlidec.1.dylib  libbz2.1.0.dylib  libexpat.1.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libpng16.16.dylib  libz.1.dylib
kernel/i686-pc-windows-msvc/: rust_office_engine.dll.lib
kernel/wasm32-unknown-unknown/: package.json  rust_office_engine.js  rust_office_engine_bg.wasm
kernel/x86_64-apple-darwin/: libbrotlicommon.1.dylib  libbrotlidec.1.dylib  libbz2.1.0.dylib  libexpat.1.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libpng16.16.dylib  libz.1.dylib
kernel/x86_64-pc-windows-msvc/: rust_office_engine.dll.lib
native/: Cargo.toml
native/src/: main.rs
server/: Cargo.toml
server/src/: args.rs  config.rs  main.rs  session.rs  utils.rs
server/src/db/: file.rs  mod.rs  user.rs
server/src/router/: auth.rs  drive.rs  mod.rs  static_files.rs
server/src/router/pages/: mod.rs  reverse_proxy.rs  static_pages.rs
server/src/storage/: files_manager.rs  mod.rs
shell/: Cargo.toml  build.rs
shell/src/: lib.rs  rust_office_engine.rs
shell/src/app/: custom_glow.rs  custom_glow_ps.glsl  custom_glow_vs.glsl  custom_skia.rs  mod.rs
web/: .gitignore  debug.mjs  next.config.mjs  package-lock.json  package.json
web/src/client/auth/: SignIn.jsx  SignUp.jsx
web/src/client/common/: MessageBox.jsx  Navigator.jsx  route_util.js
web/src/client/css/: pages.scss
web/src/client/drive/: Drive.jsx
web/src/client/edit/: Canvas.jsx  Canvas.module.scss  Editor.jsx  Editor.module.scss  MenuBar.jsx  Navigation.jsx
web/src/client/edit/redux/: sliceEngine.js  sliceFile.js  store.js
web/src/client/template/: Template.jsx
web/src/pages/: _app.jsx  _document.jsx  about.jsx  drive.jsx  signin.jsx  signup.jsx  template.jsx
web/src/pages/edit/: [fid].jsx
